# super-dl

./: .gitignore  README.md  pyproject.toml  setup.cfg  supported-sites.md
src/super_dl/: __init__.py  main.py
src/super_dl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/super_dl/sites/: amateurdoporn.py  cumslutx.py  eroleaked.py  fapnut.py  influencersgonewild.py  simpthots.py  thotfans.py  thothub.py
tests/: test_basic.py  test_fapnut.py  test_thotfans.py  test_thothub.py
