[tool.poetry]
name = "super-dl"
version = "0.0.0"
description = "A small downloader utility (scaffold)"
authors = ["devf0rlife <dev@localhost>"]
readme = "README.md"
packages = [
  { include = "super_dl", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
beautifulsoup4 = "^4.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
super-dl = "super_dl.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
