[metadata]
name = super-dl
version = 0.1.0
description = CLI tool to download videos from supported sites
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = devf0rlife
author_email = dev@localhost

[options]
packages = find:
package_dir =
    = src
install_requires =
    requests
    beautifulsoup4

[options.entry_points]
console_scripts =
    super-dl = super_dl.main:main
